fix dark mode

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,14 +9,14 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: darkBlue;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-    --color-accent1: green;
-  }
-}
+// @media (prefers-color-scheme: dark) {
+//   :root {
+//     --foreground-rgb: darkBlue;
+//     --background-start-rgb: 0, 0, 0;
+//     --background-end-rgb: 0, 0, 0;
+//     --color-accent1: green;
+//   }
+// }
 
 body {
   font-family: "Inter", sans-serif;
